fix button background on mobile view

--- a/src/components/Media/media.css
+++ b/src/components/Media/media.css
@@ -140,6 +140,7 @@
     position: relative;
     align-self: flex-end;
     border: none;
+    background: none;
     top: 15px;
   }
 
